# PyWork

./: .gitignore  PYWORK.md  PyWork 架构图.md  README.en.md  README.md  garbled_report.txt  pyproject.toml
config/: default.toml  mcp.toml  models.toml  permissions.toml  tools.toml
scripts/: check_imports.py
tests/: test_approval_dialog.py  test_approval_dialog_diff_preview.py  test_bash_tool.py  test_chat_panel.py  test_diff_utils.py  test_diff_viewer.py  test_file_history.py  test_input_box.py  test_permission_audit.py  test_permission_mode.py  test_powershell_tool.py  test_runtime_graph_approval.py  test_runtime_graph_tools.py  test_runtime_tool_result_payload.py  test_runtime_write_flow.py  test_status_bar.py  test_tool_registry_high_risk_tools.py  test_tui_app.py  test_tui_diff_components.py
tests/coordinator/: test_coordinator_context_modifier.py  test_coordinator_coordinator.py  test_coordinator_worker.py
tests/llm/: test_llm_messages.py
tests/permission/: test_bash_permissions.py  test_file_permissions.py  test_permission_gate.py  test_permission_policy.py  test_permission_risk.py  test_powershell_permissions.py
tests/runtime/: test_coordinator_parallel_route.py  test_permission_modes.py  test_reviewer_subagent_file_review.py  test_runtime_diff_approval_flow.py  test_runtime_file_permission_gate.py  test_runtime_graph_permission_gate.py  test_runtime_graph_tools.py  test_runtime_permission_audit_flow.py  test_runtime_permission_gate.py  test_runtime_shell_flow.py  test_runtime_shell_permission_gate.py  test_runtime_tool_result_to_agent.py  test_send_message_runtime_e2e.py  test_shared_runtime_objects.py  test_task_event_bridge.py
tests/subagents/: test_subagents_base.py  test_subagents_debugger.py  test_subagents_general.py  test_subagents_manager.py  test_subagents_manager_tasks.py  test_subagents_planner.py  test_subagents_reviewer.py  test_subagents_router.py  test_subagents_verifier.py
tests/tasks/: test_tasks_local_task.py  test_tasks_manager.py  test_tasks_storage.py  test_tasks_task.py
tests/teams/: test_teams_mailbox.py  test_teams_roster.py  test_teams_swarm.py  test_teams_team.py  test_teams_teammate.py
tests/tools/: test_agent_tool.py  test_coordinator_tool.py  test_file_change_preview_apply.py  (+6 more)
(+139 files in other folders)
