[project]
name = "pywork"
version = "0.1.0"
description = "A Python TUI coding agent workspace inspired by Claude Code-like architecture."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [
  { name = "WangQ Mr", email = "w3526852858@gmail.com" }
]
keywords = [
  "agent",
  "tui",
  "coding-agent",
  "langgraph",
  "langchain",
  "mcp",
  "multi-agent",
  "sandbox"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
  "Topic :: Software Development",
  "Topic :: Terminals"
]

dependencies = [
  # CLI / TUI
  "typer>=0.12",
  "rich>=13.7",
  "textual>=0.89",

  # Config / schema
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "typing-extensions>=4.12",
  "pyyaml>=6.0.2",
  "tomli-w>=1.0",

  # Runtime / async / storage
  "anyio>=4.4",
  "aiosqlite>=0.20",
  "orjson>=3.10",
  "psutil>=6.0",

  # LLM / Agent runtime
  "openai>=1.40",
  "anthropic>=0.34",
  "langchain-core>=0.3",
  "langchain-openai>=0.2",
  "langgraph>=0.2",
  "langgraph-checkpoint-sqlite>=2.0",
  "langgraph-supervisor>=0.0.20",
  "deepagents>=0.0.4",

  # MCP
  "mcp>=1.0",

  # Project tools
  "httpx>=0.27",
  "GitPython>=3.1",
  "unidiff>=0.7",
  "tree-sitter>=0.23",
  "nbformat>=5.10"
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
  "mypy>=1.13",
  "types-PyYAML>=6.0.12",
  "pre-commit>=4.0"
]

[project.scripts]
pywork = "pywork.entrypoints.cli:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pywork"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM"
]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
ignore_missing_imports = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
